--- a/pitch.html
+++ b/pitch.html
@@ -8,16 +8,16 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="bg-gradient-to-t from-blue-500 via-purple-500 to-pink-500 text-white font-sans">
+<body class="bg-gradient-to-t from-blue-800 via-green-800 to-pink-800 text-white font-sans">
 
     <!-- Header Section -->
-    <header class="py-10 bg-gradient-to-t from-pink-500 to-blue-500 text-center">
+    <header class="py-10 bg-gradient-to-t from-green-800 to-green-800 border text-center">
         <h1 class="text-4xl font-bold">CoinFandom</h1>
         <p class="mt-4 text-lg">A platform bridging social media promotion and side income opportunities.</p>
     </header>
 
     <!-- About Section -->
-    <section class="py-16 bg-gradient-to-t from-green-500 to-pink-500 text-white">
+    <section class="py-16 bg-gradient-to-t from-red-800 to-red-800 text-white border">
         <div class="max-w-6xl mx-auto px-8">
             <h2 class="text-4xl font-extrabold text-center mb-10">Problem & Solution</h2>
 
@@ -42,12 +42,12 @@
                 <h3 class="text-2xl font-semibold mb-4">Problem: Difficulty in Gaining Social Media Engagement</h3>
                 <p class="text-lg mb-4">For many individuals starting their social media journey, building an audience
                     and gaining engagement is challenging. Small creators or businesses often struggle to gain
-                    visibility and credibility, which is crucial for growth and success on platforms like Instagram,
+                    visibility and cgreenibility, which is crucial for growth and success on platforms like Instagram,
                     Facebook, and YouTube.</p>
                 <h4 class="text-xl font-semibold mt-6">Solution: Affordable Social Media Engagement</h4>
                 <p class="text-lg">CoinFandom helps users gain authentic social media engagement by offering affordable
                     services such as likes, shares, and follows. Through the platform, individuals can boost their
-                    social media presence, attract more followers, and increase their credibility, all while earning
+                    social media presence, attract more followers, and increase their cgreenibility, all while earning
                     money by completing tasks for others.</p>
             </div>
 
@@ -83,7 +83,7 @@
     </section>
 
     <!-- Promoters Section -->
-    <section class="py-16 bg-gradient-to-t from-teal-400 to-green-500 ">
+    <section class="py-16 bg-gradient-to-t from-teal-800 to-teal-800  border">
         <div class="max-w-4xl mx-auto px-6">
             <h2 class="text-3xl font-semibold mb-6 text-left">For Promoters</h2>
             <p class="leading-relaxed text-left">
@@ -100,7 +100,7 @@
     </section>
 
     <!-- Earners Section -->
-    <section class="py-16 bg-gradient-to-t from-teal-400 to-teal-400">
+    <section class="py-16 bg-gradient-to-t from-purple-800 to-purple-800 border">
         <div class="max-w-4xl mx-auto px-6">
             <h2 class="text-3xl font-semibold mb-6 text-left">For Earners</h2>
             <p class="leading-relaxed text-left">
@@ -116,10 +116,10 @@
     </section>
 
     <!-- Revenue Section -->
-    <section class="py-16 bg-gradient-to-t from-purple-400  to-teal-400">
+    <section class="py-16 bg-gradient-to-t from-gray-800  to-gray-800 border">
         <div class="max-w-4xl mx-auto px-6">
-            <h2 class="text-3xl font-semibold mb-6 text-center">Revenue Sources</h2>
-            <p class="leading-relaxed text-center">CoinFandom generates revenue through the following:</p>
+            <h2 class="text-3xl font-semibold mb-6 text-left">Revenue Sources</h2>
+            <p class="leading-relaxed text-left">CoinFandom generates revenue through the following:</p>
             <ul class="mt-6 list-disc list-inside">
                 <li>Display Advertisements</li>
                 <li>Membership Fees</li>
@@ -129,7 +129,7 @@
     </section>
 
     <!-- Membership Tiers Section -->
-    <section class="py-16 bg-gradient-to-t from-purple-600  to-purple-400">
+    <section class="py-16 bg-gradient-to-t from-pink-800  to-pink-800 border">
         <div class="max-w-4xl mx-auto px-6 text-center">
             <h2 class="text-3xl font-semibold mb-6">Membership Tiers</h2>
             <table class="table-auto w-full border border-white text-center mt-8">
@@ -148,7 +148,7 @@
                     </tr>
                     <tr>
                         <td class="px-4 py-2">Part-Time</td>
-                        <td class="px-4 py-2">500 Taka</td>
+                        <td class="px-4 py-2">800 Taka</td>
                         <td class="px-4 py-2">350</td>
                     </tr>
                     <tr>
@@ -162,7 +162,7 @@
     </section>
 
     <!-- calculate  -->
-    <section class="py-16 bg-gradient-to-t from-blue-500 to-purple-600 text-white">
+    <section class="py-16 bg-gradient-to-t from-green-800 to-green-800 text-white border">
         <div class="max-w-6xl mx-auto px-8">
             <h2 class="text-4xl font-extrabold text-center mb-10">Daily Financial Insights</h2>
 
@@ -179,12 +179,12 @@
                     <div>
                         <h4 class="text-xl font-semibold">Impressions Generated</h4>
                         <p class="text-lg">Calculation: 50,000 × 10</p>
-                        <p class="text-lg">Result: 500,000 impressions</p>
+                        <p class="text-lg">Result: 800,000 impressions</p>
                     </div>
 
                     <div>
                         <h4 class="text-xl font-semibold">Ad Revenue</h4>
-                        <p class="text-lg">Calculation: 500,000 ÷ 1,000 × 40</p>
+                        <p class="text-lg">Calculation: 800,000 ÷ 1,000 × 40</p>
                         <p class="text-lg">Result: 20,000 Taka</p>
                     </div>
 
@@ -205,7 +205,7 @@
             <!-- Analysis -->
             <div class="mt-10">
                 <h3 class="text-2xl font-semibold mb-4">Revenue-Expense Analysis</h3>
-                <p class="mb-2">Earned through display ads, each task generates 10 impressions, resulting in 500,000
+                <p class="mb-2">Earned through display ads, each task generates 10 impressions, resulting in 800,000
                     daily impressions. At a rate of 40 Taka per 1,000 impressions, the daily ad revenue is <span
                         class="font-bold">20,000 Taka</span>.</p>
                 <p class="mb-2">Expenses include payments to earners at 0.340 Taka per task, resulting in <span
@@ -217,21 +217,21 @@
     </section>
 
     <!-- Marketing Strategy Section -->
-    <section class="py-16 bg-gradient-to-t from-purple-600  to-blue-500">
+    <section class="py-16 bg-gradient-to-t from-yellow-800  to-yellow-800 border">
         <div class="max-w-4xl mx-auto px-6">
             <h2 class="text-3xl font-semibold mb-6 text-center">Marketing Strategy</h2>
             <ol class="list-decimal list-inside">
                 <li><span class="font-bold">Earner Arc:</span> Focused on attracting earners with targeted ads.</li>
                 <li><span class="font-bold">Promoter Arc:</span> Ads designed for promoters seeking cost-effective
                     solutions.</li>
-                <li><span class="font-bold">Brand Arc:</span> Campaigns to establish credibility and brand awareness.
+                <li><span class="font-bold">Brand Arc:</span> Campaigns to establish cgreenibility and brand awareness.
                 </li>
             </ol>
         </div>
     </section>
 
     <!-- funding  -->
-    <section class="py-16 bg-gradient-to-t from-purple-900 to-purple-600 text-white">
+    <section class="py-16 bg-gradient-to-t from-blue-900 to-blue-800 text-white border">
         <div class="max-w-5xl mx-auto px-8">
             <h2 class="text-4xl font-extrabold text-center mb-10">Funding Breakdown</h2>
 
